2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* DropDownList.cs: in 2.0 first item is rendered with selected attribute
	is Enabled=false and no selected items.

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* CheckBoxList.cs: in 2.0 access key attribute is rendered in 'input' tags.

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* CheckBoxList.cs:
	* BulletedList.cs:
	* ListControl.cs:
	* ListItem.cs:
	* RadioButtonList.cs:
	fixed: list controls consider ListItem.Attributes property on render. 

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* CheckBox.cs: fixed: 'span' tag is not rendered if all attributes 
	are rendered in 'input' tag. 

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* DropDownList.cs:
	* ListBox.cs:
	used "ONLY_1_1" instead "!NET_2_0"	

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* BaseDataBoundControl.cs:
	* DataBoundControl.cs:
	* HierarchicalDataBoundControl.cs:
	refactoring: DataBoundControl and HierarchicalDataBoundControl use internal
	method in BaseDataBoundControl to find a data source control.

2007-03-05  Marek Habersack  <mhabersack@novell.com>

	* Unit.cs: Support parsing of units in the form ".9em" etc.

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* TemplateColumn.cs: fixed: if ItemTemplate is null, "&nbsp;" is rendered.

2007-03-05  Marek Habersack  <mhabersack@novell.com>

	* BaseValidator.cs: make validators work correctly with
	ListItems. Patch from Daniel Nauck <dna@informatik.uni-kiel.de>
	
2007-03-04  Marek Habersack  <mhabersack@novell.com>

	* HierarchicalDataBoundControl.cs: Use the method described below
	to get the data source named in DataSourceID.

	* BaseDataBoundControl.cs: add an internal method to find a data
	source control within all the naming containers above a given
	control. The method makes it possible to find controls that reside
	in master pages.

2007-03-01 Igor Zelmanovich <igorz@mainsoft.com>

	* Repeater.cs: fixed: data-binding flow for 2.0 features.
